objects/SF_Credit_Memo_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Schedule__r.DealAccount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>Schedule__r.DealBrand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Intacct_SI_Number__c</fullName>
        <formula>Schedule__r.Intacct_SI_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intacct SI Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>Schedule__r.DealProgram__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Credit_Memo_Detail__c</fullName>
        <label>SF Credit Memo Detail</label>
        <referenceTo>SF_Credit_Memo__c</referenceTo>
        <relationshipLabel>SF Credit Memo Details</relationshipLabel>
        <relationshipName>SF_Credit_Memo_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Schedule_Week__c</fullName>
        <formula>Schedule__r.Week__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Schedule</label>
        <referenceTo>Schedules__c</referenceTo>
        <relationshipLabel>SF Credit Memo Details</relationshipLabel>
        <relationshipName>SF_Credit_Memo_Details</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Length__c</fullName>
        <formula>Schedule__r.UnitLength__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>SF Credit Memo Detail</label>
    <nameField>
        <displayFormat>SFCMD-{00000}</displayFormat>
        <label>SF Credit Memo Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SF Credit Memo Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SFCM_Complete</fullName>
        <active>true</active>
        <description>This rule will ensure that no changes are made to any SFCM that has been processed and is marked as &quot;complete&quot;.</description>
        <errorConditionFormula>SF_Credit_Memo_Detail__r.Complete__c =TRUE</errorConditionFormula>
        <errorMessage>This SFCM has been processed and marked off as complete by Finance. Please consult with Finance before making any changes. All changes must be approved by Finance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SF_CM_Schedules_equal_Master_Deal</fullName>
        <active>true</active>
        <description>This validation rule will confirm that the schedules selected belong to the master deal</description>
        <errorConditionFormula>IF( Schedule__r.Deal_Parent__c &lt;&gt;  SF_Credit_Memo_Detail__r.Deal__c  ,true, False)</errorConditionFormula>
        <errorMessage>Schedule selected does not appear on the list of schedules found on the deal.</errorMessage>
    </validationRules>
</CustomObject>